fix: sidemenu collapsed style

--- a/src/components/MainLayout/style/index.less
+++ b/src/components/MainLayout/style/index.less
@@ -47,3 +47,17 @@
     margin: 12px 0;
   }
 }
+
+.ant-menu-inline-collapsed-tooltip {
+  a {
+    text-decoration: none;
+    color: #fff;
+
+    &:active,
+    &:focus,
+    &:hover {
+      color: #fff;
+      text-decoration: none;
+    }
+  }
+}
